--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -13,10 +14,6 @@
   },
   "keywords": [
     "marked"
-  ],
-  "files": [
-    "lib",
-    "dist"
   ],
   "author": "Mivinci",
   "license": "MIT",
